
package InterfaceDesign;

public interface Debt 
{
    public double getDebtAmount();
}
